Add internal wa template endpoint
